# dbgraph

./: README.md  main.py  pyproject.toml
data/: northwind-desc.md  northwind-graph-v2.json  northwind-graph.json
data/northwind-index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
dbgraph/builder/: graph_builder.py
dbgraph/builder/sqlite/: sqlite_graph_builder.py
dbgraph/descriptor/: asset_descriptor.py  graph_descriptor.py  graph_descriptor_v1.py
dbgraph/entity/: aspect.py  asset.py  asset_type.py  dbgraph.py  link.py  link_type.py  rdbgraph.py
dbgraph/io/: graph_loader.py  graph_writer.py  json_graph_loader.py  json_graph_writer.py
dbgraph/llm/: llm.py  oai_llm.py
dbgraph/search/: bm25_search_engine.py  search_engine.py
diagrams/: entity.txt  usecase.txt
tests/: test_bm25s_search_engine.py  test_dbgraph.py  test_graph_descriptor_v1.py  test_json_graph_loader.py  test_json_graph_writer.py  test_rdbgraph.py  test_sqlite_graph_builder.py
