[project]
name = "dbgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bm25s[all]>=0.3.9",
    "grip>=4.6.2",
    "matplotlib>=3.11.0",
    "openai>=2.45.0",
    "psutil>=7.2.2",
    "pydot>=4.0.1",
    "pympler>=1.1",
    "pystemmer>=3.1.0",
    "rustworkx>=0.18.0",
    "tqdm>=4.68.4",
]
